; ModuleID = '/home/carl/AnghaBench/redis/deps/lua/src/extr_lparser.c_adjust_assign.c'
source_filename = "/home/carl/AnghaBench/redis/deps/lua/src/extr_lparser.c_adjust_assign.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_13__ = type { %struct.TYPE_14__* }
%struct.TYPE_14__ = type { i32 }
%struct.TYPE_12__ = type { i64 }

@VVOID = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_13__*, i32, i32, %struct.TYPE_12__*)* @adjust_assign to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @adjust_assign(%struct.TYPE_13__* %0, i32 %1, i32 %2, %struct.TYPE_12__* %3) #0 {
  %5 = alloca %struct.TYPE_13__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_12__*, align 8
  %9 = alloca %struct.TYPE_14__*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store %struct.TYPE_13__* %0, %struct.TYPE_13__** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store %struct.TYPE_12__* %3, %struct.TYPE_12__** %8, align 8
  %12 = load %struct.TYPE_13__*, %struct.TYPE_13__** %5, align 8
  %13 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %12, i32 0, i32 0
  %14 = load %struct.TYPE_14__*, %struct.TYPE_14__** %13, align 8
  store %struct.TYPE_14__* %14, %struct.TYPE_14__** %9, align 8
  %15 = load i32, i32* %6, align 4
  %16 = load i32, i32* %7, align 4
  %17 = sub nsw i32 %15, %16
  store i32 %17, i32* %10, align 4
  %18 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  %19 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = call i64 @hasmultret(i64 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %42

23:                                               ; preds = %4
  %24 = load i32, i32* %10, align 4
  %25 = add nsw i32 %24, 1
  store i32 %25, i32* %10, align 4
  %26 = load i32, i32* %10, align 4
  %27 = icmp slt i32 %26, 0
  br i1 %27, label %28, label %29

28:                                               ; preds = %23
  store i32 0, i32* %10, align 4
  br label %29

29:                                               ; preds = %28, %23
  %30 = load %struct.TYPE_14__*, %struct.TYPE_14__** %9, align 8
  %31 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  %32 = load i32, i32* %10, align 4
  %33 = call i32 @luaK_setreturns(%struct.TYPE_14__* %30, %struct.TYPE_12__* %31, i32 %32)
  %34 = load i32, i32* %10, align 4
  %35 = icmp sgt i32 %34, 1
  br i1 %35, label %36, label %41

36:                                               ; preds = %29
  %37 = load %struct.TYPE_14__*, %struct.TYPE_14__** %9, align 8
  %38 = load i32, i32* %10, align 4
  %39 = sub nsw i32 %38, 1
  %40 = call i32 @luaK_reserveregs(%struct.TYPE_14__* %37, i32 %39)
  br label %41

41:                                               ; preds = %36, %29
  br label %67

42:                                               ; preds = %4
  %43 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  %44 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %43, i32 0, i32 0
  %45 = load i64, i64* %44, align 8
  %46 = load i64, i64* @VVOID, align 8
  %47 = icmp ne i64 %45, %46
  br i1 %47, label %48, label %52

48:                                               ; preds = %42
  %49 = load %struct.TYPE_14__*, %struct.TYPE_14__** %9, align 8
  %50 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  %51 = call i32 @luaK_exp2nextreg(%struct.TYPE_14__* %49, %struct.TYPE_12__* %50)
  br label %52

52:                                               ; preds = %48, %42
  %53 = load i32, i32* %10, align 4
  %54 = icmp sgt i32 %53, 0
  br i1 %54, label %55, label %66

55:                                               ; preds = %52
  %56 = load %struct.TYPE_14__*, %struct.TYPE_14__** %9, align 8
  %57 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %56, i32 0, i32 0
  %58 = load i32, i32* %57, align 4
  store i32 %58, i32* %11, align 4
  %59 = load %struct.TYPE_14__*, %struct.TYPE_14__** %9, align 8
  %60 = load i32, i32* %10, align 4
  %61 = call i32 @luaK_reserveregs(%struct.TYPE_14__* %59, i32 %60)
  %62 = load %struct.TYPE_14__*, %struct.TYPE_14__** %9, align 8
  %63 = load i32, i32* %11, align 4
  %64 = load i32, i32* %10, align 4
  %65 = call i32 @luaK_nil(%struct.TYPE_14__* %62, i32 %63, i32 %64)
  br label %66

66:                                               ; preds = %55, %52
  br label %67

67:                                               ; preds = %66, %41
  ret void
}

declare dso_local i64 @hasmultret(i64) #1

declare dso_local i32 @luaK_setreturns(%struct.TYPE_14__*, %struct.TYPE_12__*, i32) #1

declare dso_local i32 @luaK_reserveregs(%struct.TYPE_14__*, i32) #1

declare dso_local i32 @luaK_exp2nextreg(%struct.TYPE_14__*, %struct.TYPE_12__*) #1

declare dso_local i32 @luaK_nil(%struct.TYPE_14__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
